manifest_Dev/namespace.yml

#namespace for Dev environment
apiVersion: v1
kind: Namespace
metadata:
  name: petclinic-dev
