manifest_Dev/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: petclinic-dev
  labels:
    app: petclinic-label-prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: petclinic-label-dev
  template:
    metadata:
      labels:
        app: petclinic-label-dev
    spec:
      serviceAccountName: petclinic-sa-dev
      containers:
      - name: petclinic-dev
        image: prasannakumarsinganamalla431/petclinic:8
        ports:
        - containerPort: 80
