manifest_Dev/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless-backend
  namespace: petclinic-dev
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
    - port: 3306
